--- a/Clase #4/News/News/CustomCell/NewsTableViewCell.xib
+++ b/Clase #4/News/News/CustomCell/NewsTableViewCell.xib
@@ -11,30 +11,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="News" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="News" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="N6p-jm-S4M">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                        <rect key="frame" x="10" y="10" width="300" height="79.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKQ-aZ-BNN">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="26.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihe-AM-lYX">
-                                <rect key="frame" x="0.0" y="26.5" width="320" height="26.5"/>
+                                <rect key="frame" x="0.0" y="26.5" width="300" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ga-Rp-12p">
-                                <rect key="frame" x="0.0" y="53" width="320" height="26.5"/>
+                                <rect key="frame" x="0.0" y="53" width="300" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -43,10 +43,10 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="N6p-jm-S4M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="7VE-fI-uoP"/>
-                    <constraint firstAttribute="trailing" secondItem="N6p-jm-S4M" secondAttribute="trailing" id="Ju5-aX-9T1"/>
-                    <constraint firstAttribute="bottom" secondItem="N6p-jm-S4M" secondAttribute="bottom" id="Upb-Zh-zNA"/>
-                    <constraint firstItem="N6p-jm-S4M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="r7r-dI-Nx7"/>
+                    <constraint firstItem="N6p-jm-S4M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="7VE-fI-uoP"/>
+                    <constraint firstAttribute="trailing" secondItem="N6p-jm-S4M" secondAttribute="trailing" constant="10" id="Ju5-aX-9T1"/>
+                    <constraint firstAttribute="bottom" secondItem="N6p-jm-S4M" secondAttribute="bottom" constant="10" id="Upb-Zh-zNA"/>
+                    <constraint firstItem="N6p-jm-S4M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="r7r-dI-Nx7"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
