--- a/Clase #4/News/News/Base.lproj/Main.storyboard
+++ b/Clase #4/News/News/Base.lproj/Main.storyboard
@@ -65,11 +65,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="tsw-9t-xXI">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EUJ-H2-OLn">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="SRj-HJ-xIX" id="d5s-Vp-CTC"/>
+                                            <outlet property="delegate" destination="SRj-HJ-xIX" id="ZiO-Mn-egS"/>
+                                        </connections>
                                     </tableView>
                                 </subviews>
                             </stackView>
@@ -82,6 +86,7 @@
                             <constraint firstAttribute="trailing" secondItem="tsw-9t-xXI" secondAttribute="trailing" id="zQ9-wc-SJ8"/>
                         </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="EUJ-H2-OLn" id="Opy-LL-jBb"/>
                     </connections>
@@ -89,6 +94,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xjc-BK-Z0A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1766" y="-544"/>
+        </scene>
+        <!--News Detail Table View Controller-->
+        <scene sceneID="Q3V-HH-sJC">
+            <objects>
+                <tableViewController storyboardIdentifier="NewsDetailTableViewController" id="gkj-S4-kb8" customClass="NewsDetailTableViewController" customModule="News" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="V1V-pv-iQm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
+                        <sections>
+                            <tableViewSection id="4ht-qD-2Ml">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Lap-0h-RgG">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lap-0h-RgG" id="wum-xL-Yqs">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="myG-fr-HHi">
+                                                    <rect key="frame" x="10" y="10" width="355" height="23.5"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="myG-fr-HHi" firstAttribute="top" secondItem="wum-xL-Yqs" secondAttribute="top" constant="10" id="HW5-YZ-Kmc"/>
+                                                <constraint firstItem="myG-fr-HHi" firstAttribute="leading" secondItem="wum-xL-Yqs" secondAttribute="leading" constant="10" id="TYq-VK-uJk"/>
+                                                <constraint firstAttribute="trailing" secondItem="myG-fr-HHi" secondAttribute="trailing" constant="10" id="dLM-O9-Jd1"/>
+                                                <constraint firstAttribute="bottom" secondItem="myG-fr-HHi" secondAttribute="bottom" constant="10" id="ugG-ha-AMG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="300" id="CVE-YV-MhB">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="300"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CVE-YV-MhB" id="f00-vC-Muz">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qEd-aF-CNN">
+                                                    <rect key="frame" x="15" y="15" width="345" height="269.5"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qEd-aF-CNN" firstAttribute="leading" secondItem="f00-vC-Muz" secondAttribute="leading" constant="15" id="JUQ-yU-Zys"/>
+                                                <constraint firstAttribute="bottom" secondItem="qEd-aF-CNN" secondAttribute="bottom" constant="15" id="P2g-KC-cG1"/>
+                                                <constraint firstAttribute="trailing" secondItem="qEd-aF-CNN" secondAttribute="trailing" constant="15" id="Xz4-le-NZk"/>
+                                                <constraint firstItem="qEd-aF-CNN" firstAttribute="top" secondItem="f00-vC-Muz" secondAttribute="top" constant="15" id="rVv-Ds-nqv"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="gkj-S4-kb8" id="Gs1-Dh-Dbl"/>
+                            <outlet property="delegate" destination="gkj-S4-kb8" id="Inc-W9-uqh"/>
+                        </connections>
+                    </tableView>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="descriptiontxt" destination="qEd-aF-CNN" id="w7S-DF-Ty3"/>
+                        <outlet property="titletxt" destination="myG-fr-HHi" id="24c-ew-YYX"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I7t-Tu-EBP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2561" y="-544"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="HNf-Y3-NUU">
