--- a/Clase #7/Tarea #3/Tarea #3/Base.lproj/Main.storyboard
+++ b/Clase #7/Tarea #3/Tarea #3/Base.lproj/Main.storyboard
@@ -94,6 +94,10 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ooP-A8-Qjt">
+                                <rect key="frame" x="18" y="312" width="339" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="0.94901960780000005" green="0.94901960780000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -111,6 +115,7 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="imgView" destination="ooP-A8-Qjt" id="pds-50-lJ8"/>
                         <outlet property="txtColor" destination="ngX-3q-NqY" id="MVx-m2-rr8"/>
                         <outlet property="txtName" destination="Hcu-9g-5rM" id="5er-xz-vFu"/>
                     </connections>
